--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,8 @@ services:
       - AZURE_TENANTID=YOUR_AZURE_TENANT_ID
       - AZURE_RESOURCEGROUP=YOUR_AZURE_RESOURCE_GROUP
       - AZURE_CNAME=YOUR_CNAME_INCLUDING_DOMAIN_TLD
+
+networks:
+  containers:
+    external:
+      name: containers
