--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     image: grahamcropley/azurednsautoupdater:latest
     networks:
       - containers
+    dns:
+      - 8.8.8.8
+      - 4.4.4.4
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
